@@ -7785,3 +7785,7 @@ EPRINTS-3.1-beta-2
 2008-10-14 cjg
  * Fixed minor bug in Component::Upload which prevented it working with zero
     fields from the document.
+
+2008-10-14 cjg
+ * Fixed honeycomb plugin to not cause problems if the honeycomb module is 
+    not installed.
